--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
+  "functions": {
+    "api/**/*.ts": { "runtime": "nodejs20.x" }
+  },
   "crons": [
-    { "path": "/api/xpl-alert", "schedule": "* * * * *" }
+    { "path": "/api/xpl-spread", "schedule": "0 0 * * *" }
   ]
 }
